# SwitchDyn-Changepoints-Parameters-Identification

./: .gitignore  CITATION.bib  Project.toml  README.md
.github/workflows/: CI.yml
data/raw_data/: README.md  germany_data.csv
data/sims/inference_epid/: epid_data.json  epid_data_Rbeast.json  epid_data_mcp.json  epid_data_segmented.json  epid_data_strucchange.json
data/sims/inference_lv/: lv_data_1.json  lv_data_10.json  lv_data_100.json  lv_data_101.json  lv_data_102.json  lv_data_103.json  lv_data_104.json  lv_data_105.json  lv_data_106.json  lv_data_107.json  lv_data_108.json  lv_data_109.json  lv_data_11.json  lv_data_110.json  lv_data_111.json  (+285 more)
scripts/plots_scripts/: pyproject.toml
scripts/plots_scripts/epid/: load_json_helper_function.py  plot_epid.py  plot_epid_compare.py  plot_helper_functions.py
scripts/plots_scripts/lv/: load_json_helper_function.py  plot_helper_functions.py  plot_multiple_cases.py  plot_multiple_cases_mcp.py  plot_timeseries_posterior.py
scripts/plots_scripts/plots_scripts/: plot_helpers.py  utils_least_square.py
scripts/plots_scripts/stoch/: load_helper_functions.py  plot_helper_functions.py  plot_stoch_merge_bayesian.py  plot_timeseries.py  setup_csv_file_for_changepoint.py
src/: abc_module.jl  adjoint_method.jl  extract_local_sensitivity.jl  forwarddiffsense.jl  get_country_data.jl  lotka_volterra_ode_models.jl  ode_models.jl  reverse_type_adjoint_simple.jl  seird_model.jl  solve_event_times.jl  stochastic_gene_ode_models.jl  turing_models.jl  utils.jl  viz.jl
test/: runtests.jl  test_adjoint_method.jl  utils.jl
(+912 files in other folders)
