[tool.poetry]
name = "plots-scripts"
version = "0.1.0"
description = ""
authors = ["xiaoming fu"]
readme = "README.md"
packages = [
    { include = "plots_scripts"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
